// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the style 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  margin-top: 1.25rem;
  margin-bottom: 1.25rem;
  border-radius: 0.125rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  background-color: #7db1ff;
  color: #003182;
}

<div
    class="emotion-0"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </div>
</DocumentFragment>
`;

exports[`should display CBox with type as header 1`] = `
<DocumentFragment>
  <header
    class="emotion-0"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </header>
</DocumentFragment>
`;

exports[`should display CBox with type as p 1`] = `
<DocumentFragment>
  <p
    class="emotion-0"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </p>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-chakra-component="CBox"
    data-testid="box"
  >
    Box Works
  </div>
</DocumentFragment>
`;
